--- a/other.html
+++ b/other.html
@@ -62,6 +62,12 @@
 
 <img src="images/poster.png" style="margin-bottom: 10px;" height="500" width="350">
 <p style="margin-bottom: 20px"> Poster for a design tour I helped host during my internship at IQVIA.
+
+
+
+
+  <img src="images/beetle.png" style="margin-bottom: 10px;" height="500" width="590">
+  <p style="margin-bottom: 20px"> Beetle poster
 </p>
 
 <br /><br />
