--- a/projtracker.html
+++ b/projtracker.html
@@ -159,6 +159,7 @@ Through our interviews with potential users, we found patterns in what they had 
     <li>  Our app incentivizes user to accomplish and continue documents their tasks while Google Calendar has no such feature </li> </ul>
 </div>
 
+<!-- add presentation link? -->
 
 <br /><br />
 <h4> Idea Generation</h4>
@@ -186,12 +187,34 @@ Through our interviews with potential users, we found patterns in what they had 
 While it does take some of the user’s time to input their entry, we designed the process to require as little information as possible as per the identified user need of minimal effort. Of course, this does take more time than not tracking at all, however we think that the benefits of our visualization, documentation, and incentivization far outweigh the cost of entry time. Overall, we see the value of our app compared to alternatives to be the categorization of projects, customization of specific field measurements, visualization of the frequency of entries, and incentivization through the emoji system to encourage users to continue documenting and accomplishing their goals
 </p>
 
+<br /><br />
+<h4>Paper Prototype</h4>
+<br />
+
+<p> We used the paper prototype to run through with users.  </p>
+<br />
+<div>
+<img class = "screens" src ="images/paperprototype/Group.jpg" style = "width:400px">
+</div>
+<br />
+<b>Our Revisions:</b>
+  <div class="myDivElement">
+  <ul class = "right">
+    <li> Removed checkbox for "no measurement" </li>
+    <li> Emphasize visibility of adding a new entry</li>
+    <li> s</li>
+</div>
+
 
 <br /><br />
 <h4>Final Product</h4>
+
 <br />
 <img class = "screens" src ="images/screens.png">
-<p> We used Vue, custom CSS, JSON and Javascript to implement the app</p>
+<p>The app incentivizes users by the emoji</p>
+<p> We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
+
+
 
 <br /><br />
 <h5>Check out the live site available on mobile: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
