--- a/projtracker.html
+++ b/projtracker.html
@@ -211,7 +211,7 @@ While it does take some of the user’s time to input their entry, we designed t
 
 <br />
 <img class = "screens" src ="images/screens.png">
-<p>The app incentivizes users by the emoji</p>
+<p>The app incentivizes users by use of the emojis.</p>
 <p> We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
 
 
