--- a/projtracker.html
+++ b/projtracker.html
@@ -53,7 +53,7 @@
 <div class="header"><h3>INFO 4340</h3></div>
 <div class="info">
 <p>
-Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of CIS students to develop a project tracking app.
+Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of CIS students to develop a <span style = "font-weight:bold"> project tracking app </span>.
 </p>
 
 
@@ -61,7 +61,7 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 <h4>User Research</h4>
 <br />
 <p>
-We selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
+What are the pain points people have with app tracking? To delve deeper, we selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
 </p>
 <div class = "row">
 
