--- a/iqvia.html
+++ b/iqvia.html
@@ -63,12 +63,12 @@
 
 <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
-<p style="margin-bottom: 20px"> Squad
+<p style="margin-bottom: 20px; text-align: center"> Squad
 </p>
 
 
 <img src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
-<p style="margin-bottom: 20px"> Part of a set of icons I created for my project
+<p style="margin-bottom: 20px; text-align: center"> Part of a set of icons I created for my project
 </p>
 
 
