--- a/other.html
+++ b/other.html
@@ -53,7 +53,7 @@
 <div class="info">
 
   <img class = "center" src="images/kyoto.png" style="margin-bottom: 10px">
-  <p style="margin-bottom: 20px">I wanted to recreate a memory from my childhood but render it in a geometric style. This was my first time experimenting with low-poly art, but be on the lookout for more in the future!
+  <p style="margin-bottom: 20px; text-align: center">I wanted to recreate a memory from my childhood but render it in a geometric style. This was my first time experimenting with low-poly art, but be on the lookout for more in the future!
 </p>
 
 
@@ -61,13 +61,13 @@
 
 
 <img src="images/poster.png" style="margin-bottom: 10px;" height="500" width="350">
-<p style="margin-bottom: 20px"> Poster for a design tour I helped host during my internship at IQVIA.
+<p style="margin-bottom: 20px; text-align: center"> Poster for a design tour I helped host during my internship at IQVIA.
 
 
 
 
   <img src="images/beetle.png" style="margin-bottom: 10px;" height="500" width="590">
-  <p style="margin-bottom: 20px"> Beetle poster
+  <p style="margin-bottom: 20px; text-align: center"> Beetle poster I made for fun
 </p>
 
 <br /><br />
