--- a/other.html
+++ b/other.html
@@ -71,7 +71,7 @@
 </p>
 
 <br /><br />
-<h6><strong>More Coming Soon!</strong></h6>
+<h6 style="text-align: center"><strong>More Coming Soon!</strong></h6>
 </div>
 
 
