--- a/projtracker.html
+++ b/projtracker.html
@@ -237,7 +237,7 @@ While it does take some of the user’s time to input their entry, we designed t
 
 
 .screens{
-  width:900px;
+  width:100%;
 }
 
 
