--- a/projtracker.html
+++ b/projtracker.html
@@ -66,33 +66,33 @@ What are the pain points people have with app tracking? To delve deeper, we sele
 <br />
 <div class = "row">
 
-<img id="myImg" src="images/smoker_persona.png" style="max-width:800px; display:inline">
+<img id="myImg" src="images/smoker_persona.png" style="max-width:700px; display:inline">
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
-</div>
+</div> -->
 
 
 
-<img id="myImg" src="images/guitar_persona.png" style="max-width:800px; display:inline">
+<img id="myImg" src="images/guitar_persona.png" style="max-width:700px; display:inline">
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
-</div>
+</div> -->
 
 
 
-<img id="myImg" src="images/football_persona.png" style="max-width:800px; display:inline">
+<img id="myImg" src="images/football_persona.png" style="max-width:700px; display:inline">
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
-</div>
+</div> -->
 
 
 </div>
@@ -168,19 +168,19 @@ Through our interviews with potential users, we found patterns in what they had 
 <!-- <img src ="images/affinity.png" style="width:400px"> -->
 <img id="myImg" src="images/affinity.png" style="max-width:700px; height:215px; display:inline">
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
-</div>
+</div> -->
 
 <img id="myImg" src="images/brainstorm_3.0.jpg" style="max-width:700px; display:inline">
 <!-- The Modal -->
-<div id="myModal" class="modal">
+<!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
-</div>
+</div> -->
 <!--
 <img src ="images/brainstorm_3.0.jpg" style="width:400px"> -->
 <br />
