--- a/projtracker.html
+++ b/projtracker.html
@@ -166,7 +166,7 @@ Through our interviews with potential users, we found patterns in what they had 
 <h4> Idea Generation</h4>
 <br />
 <!-- <img src ="images/affinity.png" style="width:400px"> -->
-<img id="myImg" src="images/affinity.png" style="max-width:700px; height:215px; display:inline">
+<img id="myImg" src="images/affinity.png" style="max-width:700px; display:inline">
 <!-- The Modal -->
 <!-- <div id="myModal" class="modal">
   <span class="close">&times;</span>
