--- a/projtracker.html
+++ b/projtracker.html
@@ -185,7 +185,9 @@ Through our interviews with potential users, we found patterns in what they had 
 <img src ="images/brainstorm_3.0.jpg" style="width:400px"> -->
 <br />
 <p>
-While it does take some of the user’s time to input their entry, we designed the process to require as little information as possible as per the identified user need of minimal effort. Of course, this does take more time than not tracking at all, however we think that the benefits of our visualization, documentation, and incentivization far outweigh the cost of entry time. Overall, we see the value of our app compared to alternatives to be the categorization of projects, customization of specific field measurements, visualization of the frequency of entries, and incentivization through the emoji system to encourage users to continue documenting and accomplishing their goals
+While it does take some of the user’s time to input their entry, we designed the process to require as little information as possible as per the identified user need of minimal effort. Of course, this does take more time than not tracking at all, however we think that the benefits of our visualization, documentation, and incentivization far outweigh the cost of entry time.
+<br />
+Overall, we see the value of our app compared to alternatives to be the categorization of projects, customization of specific field measurements, visualization of the frequency of entries, and incentivization through the emoji system to encourage users to continue documenting and accomplishing their goals
 </p>
 
 <br /><br />
