--- a/via.html
+++ b/via.html
@@ -60,7 +60,7 @@ The theme was <span style = "font-weight:bold">improve the relationship between 
 
 
 <br />
-<iframe src="https://onedrive.live.com/embed?cid=2564511D32F4B59A&resid=2564511D32F4B59A%21106&authkey=ADczl3xZF9ZARmY&em=2" width="502" height="427" frameborder="0" scrolling="no"></iframe>
+<iframe style = "text-align:center" src="https://onedrive.live.com/embed?cid=2564511D32F4B59A&resid=2564511D32F4B59A%21106&authkey=ADczl3xZF9ZARmY&em=2" width="502" height="427" frameborder="0" scrolling="no"></iframe>
 
 <!-- <br />
 <img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
