--- a/projtracker.html
+++ b/projtracker.html
@@ -127,7 +127,7 @@ Through our interviews with potential users, we found patterns in what they had 
 <h4>Market Research</h4>
 <br />
 
-<b>Notebook / Pen & Paper</b>
+<p style = "font-weight: bold">Notebook / Pen & Paper</p>
   <div class="myDivElement">
   <ul>
     <li> Our app is more successful and more lightweight because you don’t have to carry around a notebook, can sync wirelessly with computer, phone, etc.  </li>
@@ -135,7 +135,7 @@ Through our interviews with potential users, we found patterns in what they had 
     <li> 100% “customizable” -- up to you how you want to structure tracking </li>   </ul>
 </div>
 
-<b>Major competitor: Nomie</b>
+<p style = "font-weight: bold">Major competitor: Nomie</p>
   <div class="myDivElement">
   <ul>
     <li> The sophisticated features of Nomie cost money, while our app is free. </li>
@@ -144,7 +144,7 @@ Through our interviews with potential users, we found patterns in what they had 
       <li>  Has advanced features like Face ID   </li> </ul>
 </div>
 
-<b>Nothing (No Tracking): </b>
+<p style = "font-weight: bold">Nothing (No Tracking): </p>
   <div class="myDivElement">
   <ul>
     <li> Our app makes it easy to track everything that would be otherwise difficult to remember in your head </li>
@@ -153,7 +153,7 @@ Through our interviews with potential users, we found patterns in what they had 
     <li>  Doing nothing takes less effort, but will probably reap fewer results </li> </ul>
 </div>
 
-<b>Google Calendars:</b>
+<p style = "font-weight: bold">Google Calendars:</p>
   <div class="myDivElement">
   <ul>
     <li>  Our app provides the ability to add context through notes and specific measurements as opposed to a single event like in Google Calendar </li>
