--- a/projtracker.html
+++ b/projtracker.html
@@ -200,7 +200,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <img class = "screens" src ="images/paperprototype/Group.jpg" style = "width:400px">
 </div>
 <br />
-<b>Our Revisions:</b>
+<p style = "font-weight: bold">Our Revisions:</p>
   <div class="myDivElement">
   <ul>
     <li> Removed checkbox for "no measurement" </li>
