--- a/projtracker.html
+++ b/projtracker.html
@@ -194,13 +194,13 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <h4>Paper Prototype</h4>
 <br />
 
-<p> We used the paper prototype to run through with users.  </p>
+<p> We used the paper prototype to run through tasks with the potential users.  </p>
 <br />
 <div>
 <img class = "screens" src ="images/paperprototype/Group.jpg" style = "width:400px">
 </div>
 <br />
-<p style = "font-weight: bold">Our Revisions:</p>
+<p style = "font-weight: bold">Our Design Revisions:</p>
   <div class="myDivElement">
   <ul>
     <li> Removed checkbox for "no measurement" </li>
