--- a/projtracker.html
+++ b/projtracker.html
@@ -194,7 +194,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <h4>Paper Prototype</h4>
 <br />
 
-<p> We used the paper prototype to run through tasks with the potential users.  </p>
+<p> We used the paper prototype to run through tasks with the potential users. This step of the design process allowed us to test ideas without much time expenditure. Our participants provided feedback on the flow, accessibility, and discoverability of the UI.</p>
 <br />
 <div>
 <img class = "screens" src ="images/paperprototype/Group.jpg" style = "width:400px">
@@ -205,6 +205,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
   <ul>
     <li> Removed checkbox for "no measurement" </li>
     <li> Emphasize visibility of adding a new entry</li>
+      <li> "Delete project" within 3-dot menu</li>
 </div>
 
 
