--- a/projtracker.html
+++ b/projtracker.html
@@ -210,17 +210,35 @@ Overall, we see the value of our app compared to alternatives to be the categori
 
 
 <br /><br />
+
+
+
+
+<br /><br />
 <h4>Final Product</h4>
 
 <br />
 <img class = "screens" src ="images/screens.png">
-<p>The app incentivizes users by use of the emojis. We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
+<p>We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
+
+<p style = "font-weight: bold">Features:</p>
+  <div class="myDivElement">
+  <ul>
+    <li> Emojis change based on the last time you updated the project </li>
+    <li> Integration with Buefy.js calendar to display calendar view</li>
+      <li> Users can choose preset units of measurement, none, or custom</li>
+</div>
 
 
 
 <br /><br />
 <h5>Check out the live site available on mobile: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
 
+
+
+<h4>Future Considerations</h4>
+<br />
+<p>If we were to work on this project further, it would be interesting to add project tracking analytics as well as make the app responsive for web.</p>
 
 <!-- scoped means only affects this page -->
 <style scoped>
