--- a/projtracker.html
+++ b/projtracker.html
@@ -221,6 +221,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <img class = "screens" src ="images/screens.png">
 <p>We used Vue, custom CSS, JSON and Javascript to implement the app.</p>
 
+<br />
 <p style = "font-weight: bold">Features:</p>
   <div class="myDivElement">
   <ul>
@@ -235,10 +236,15 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <h5>Check out the live site available on mobile: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
 
 
-
+<!-- <br /><br />
 <h4>Future Considerations</h4>
 <br />
-<p>If we were to work on this project further, it would be interesting to add project tracking analytics as well as make the app responsive for web.</p>
+<p>If we were to work on this project further, it would be interesting to add project tracking analytics as well as make the app responsive for web.</p> -->
+
+
+
+
+
 
 <!-- scoped means only affects this page -->
 <style scoped>
