--- a/projtracker.html
+++ b/projtracker.html
@@ -184,6 +184,7 @@ Through our interviews with potential users, we found patterns in what they had 
 <!--
 <img src ="images/brainstorm_3.0.jpg" style="width:400px"> -->
 <br />
+<br />
 <p>
 While it does take some of the user’s time to input their entry, we designed the process to require as little information as possible as per the identified user need of minimal effort. Of course, this does take more time than not tracking at all, however we think that the benefits of our visualization, documentation, and incentivization far outweigh the cost of entry time.
 <br /><br />
@@ -286,7 +287,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 
 </style>
 
-
+<!--
 <script>
 // Get the modal
 var modal = document.getElementById('myModal');
@@ -308,7 +309,7 @@ var span = document.getElementsByClassName("close")[0];
 span.onclick = function() {
     modal.style.display = "none";
 }
-</script>
+</script> -->
 
 
 
