--- a/about.html
+++ b/about.html
@@ -109,8 +109,8 @@
 
               <div class="six offset-by-two columns" style="margin-top: -70px">
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
-                <h6 style="margin-bottom: 20px">Hello!
-                </h6>
+                <!-- <h6 style="margin-bottom: 20px">Hello!
+                </h6> -->
                 <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a junior at Cornell studying Information Science with an expected minor in business and Japanese.
                 </h6>
                 <h6 style="margin-bottom: 20px"> I taught myself the tools to make this website in the summer of 2017, and I have been absorbed in the world of technology ever since.
@@ -121,7 +121,7 @@
                 </h6>
                 <h6 style="margin-bottom: 40px">If you would like to chat, shoot me an email at <a href="mailto:jc2747@cornell.edu">jc2747@cornell.edu</a>!
                 </h6>
-                <a class="button" href="index">View Portfolio</a>
+                <!-- <a class="button" href="index">View Portfolio</a> -->
               </div>
             </div>
           </div>
