--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <link rel="stylesheet" href="css/style.css">
 
 
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+
+
   <!-- Google Analytics--
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
@@ -54,7 +59,7 @@
       <div class="row">
         <div class="twelve columns">
           <a href="index"><h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2></a>
-          <h4 style="margin-bottom:35px">I'm an aspiring UX designer studying Information Science at Cornell ✨</h4>
+          <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell ✨</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
@@ -66,6 +71,12 @@
       </div>
     </div>
 </div>
+<!--
+<div class="typewriter">
+  <h4>The cat and the hat.</h4>
+</div> -->
+
+
 
 <!--
 <div class="section-work" style="background-color:#FCFCFC">
@@ -471,7 +482,33 @@
             </div>
           </div>
 
+<style scoped>
+.typewriter h4 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 3.5s steps(30, end),
+    blink-caret .5s step-end infinite;
+    /* animation-iteration-count: infinite; */
+}
 
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange }
+}
+
+
+</style>
 
 
 <!--Google Analytics-->
