--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
-                <h6 style="margin-bottom: 40px">If you would like to chat, shoot me an email at <a href="mailto:jc2747@cornell.edu">jc2747@cornell.edu</a>!
+                <h6 style="margin-bottom: 40px">You may reach me at <a href="mailto:jc2747@cornell.edu">jc2747@cornell.edu</a>!
                 </h6>
                 <!-- <a class="button" href="index">View Portfolio</a> -->
               </div>
