--- a/about.html
+++ b/about.html
@@ -113,8 +113,8 @@
                 </h6> -->
                 <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a junior at Cornell studying Information Science with an expected minor in business and Japanese.
                 </h6>
-                <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
-                </h6>
+                <!-- <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
+                </h6> -->
                 <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a representative of <a href="http://www.youresearch.org/">YouResearch. </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
