--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
                 <!-- <h6 style="margin-bottom: 20px">Hello!
                 </h6> -->
-                <h6 style="margin-bottom: 20px">My name is Jintana Cunningham, and I am a junior at Cornell studying Information Science with an expected minor in business and Japanese.
+                <h6 style="margin-bottom: 20px">Hi there! I'm Jintana Cunningham, am a junior at Cornell studying Information Science with an expected minor in business and Japanese.
                 </h6>
                 <!-- <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
                 </h6> -->
