--- a/projtracker.html
+++ b/projtracker.html
@@ -50,7 +50,7 @@
     </div>
 </div>
 
-<div class="header"><h3>INFO 4340</h3></div>
+<div class="header"><h3>Project Tracker</h3></div>
 <div class="info">
 <p>
 Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of CIS students to develop a <span style = "font-weight:bold"> project tracking app </span>.
