fix josefin sans link problem?

--- a/projtracker.html
+++ b/projtracker.html
@@ -61,7 +61,7 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 <h4>User Research</h4>
 <br />
 <p>
-What are the pain points people have with app tracking? To delve deeper, we selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
+What are the pain points people have with project tracking apps? To delve deeper, we selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
 </p>
 <br />
 <div class = "row">
