--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                                             <div class= "four columns">
                                               <!-- <a href="iqvia"> -->
 
-                                              <img style="margin-bottom: 10px;" height="290" width="220" src="images/projtracker3.png">
+                                              <img style="margin-bottom: 10px;" height="285" width="220" src="images/projtracker3.png">
                                             </a>
                                             </div>
                                             <div class="six offset-by-two columns" >
-                                                <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340 - Project Tracker</h5>
+                                                <h5 class="u-dark" style="margin-bottom: 10px">Project Tracker</h5>
                                               <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                                               </h6>
                                               <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
