--- a/projtracker.html
+++ b/projtracker.html
@@ -51,10 +51,15 @@
 </div>
 
 <div class="header"><h3>Project Tracker</h3></div>
+
+
+<img class = "screens" src ="images/screens.png">
 <div class="info">
 <p>
-Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of CIS students to develop a <span style = "font-weight:bold"> project tracking app </span>.
+Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of Information Science students to develop a <span style = "font-weight:bold"> project tracking app </span>.
 </p>
+
+
 
 
 <br /><br />
@@ -235,7 +240,6 @@ Overall, we see the value of our app compared to alternatives to be the categori
 
 
 <br /><br />
-<h5>Check out the live site available on mobile: <a href="https://tm-project-tracker.herokuapp.com">Project Tracker</a> </h5>
 
 
 <!-- <br /><br />
