--- a/projtracker.html
+++ b/projtracker.html
@@ -52,8 +52,8 @@
 
 <div class="header"><h3>Project Tracker</h3></div>
 
-
-<img class = "screens" src ="images/screens.png">
+<!--
+<img class = "screens" src ="images/screens.png"> -->
 <div class="info">
 <p>
 Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of Information Science students to develop a <span style = "font-weight:bold"> project tracking app </span>.
