--- a/projtracker.html
+++ b/projtracker.html
@@ -55,6 +55,11 @@
 <!--
 <img class = "screens" src ="images/screens.png"> -->
 <div class="info">
+
+<span style = "font-weight: bold">
+  “Every higher education institution strives to give their students the best tools to facilitate success.”
+</span>
+
 <p>
 Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I worked with a small group of Information Science students to develop a <span style = "font-weight:bold"> project tracking app </span>.
 </p>
