--- a/projtracker.html
+++ b/projtracker.html
@@ -56,9 +56,9 @@
 <img class = "screens" src ="images/screens.png"> -->
 <div class="info">
 
-<span style = "font-weight: bold">
+<h5 style = "font-weight: bold">
   “Every higher education institution strives to give their students the best tools to facilitate success.”
-</span>
+</h5>
 
 <br />
 <p>
