--- a/projtracker.html
+++ b/projtracker.html
@@ -72,8 +72,28 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 <h4>User Research</h4>
 <br />
 <p>
-What are the pain points people have with project tracking apps? To delve deeper, we selected target audiences we had physical access to and brainstormed 3 different tasks people would want to track: <span style = "font-weight:bold"> Guitar-playing, weight-lifting, and quitting vaping</span>. From there we created personas to help us refine and focus our design.
-</p>
+What are the pain points people have with project tracking apps? To delve deeper, <b>we selected target audiences we had physical access to </b>- namely, Cornell students and brainstormed 3 different tasks people would want to track:
+
+
+
+<div class="myDivElement">
+<ol>
+<li>
+  Someone who wants to learn guitar
+</li>
+<li>
+  Someone who wants to keep track of weight-lifting
+</li>
+
+<li>
+  Someone who wants to quit vaping
+</ol>
+</div>
+
+
+
+<!-- <p>From there we created personas to help us refine and focus our design.
+</p> -->
 <br />
 <div class = "row">
 
