--- a/projtracker.html
+++ b/projtracker.html
@@ -57,7 +57,7 @@
 <div class="info">
 
 <h5 style = "font-weight: bold">
-  “Every higher education institution strives to give their students the best tools to facilitate success.”
+  “Technology can and should empower individuals to change their behavior for the better.”
 </h5>
 
 <br />
@@ -72,21 +72,21 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 <h4>User Research</h4>
 <br />
 <p>
-What are the pain points people have with project tracking apps? To delve deeper, <b>we selected target audiences we had physical access to </b>- namely, Cornell students and brainstormed 3 different tasks people would want to track:
+What are the pain points people have with project tracking apps? To delve deeper, <b>we selected target audiences we had physical access to </b>- namely Cornell students, and brainstormed 3 different tasks people would want to track:
 
 
 
 <div class="myDivElement">
 <ol>
 <li>
-  Someone who wants to learn guitar
+  Someone who wants to learn guitar: this target audience can help us design for people who want to improve a skill
 </li>
 <li>
-  Someone who wants to keep track of weight-lifting
+  Someone who wants to keep track of weight-lifting: this target audience can help us design for people who want to keep track
 </li>
 
 <li>
-  Someone who wants to quit vaping
+  Someone who wants to quit vaping: this target audience can help us design for reduction of a behavior
 </ol>
 </div>
 
