--- a/projtracker.html
+++ b/projtracker.html
@@ -56,7 +56,8 @@
 <img class = "screens" src ="images/screens.png"> -->
 <div class="info">
 
-<h5 style = "font-weight: bold">
+<h5 style = "font-weight: 400">
+  <br />
   “Technology can and should empower individuals to change their behavior for the better.”
 </h5>
 <img class = "screens" src ="images/screens.png">
