--- a/projtracker.html
+++ b/projtracker.html
@@ -89,7 +89,7 @@ What are the pain points people have with project tracking apps? To delve deeper
 </li>
 
 <li>
-  Someone who wants to quit vaping: this target audience can help us design for reduction of a behavior
+  Someone who wants to quit vaping: this target audience can help us design for curtailing an unwanted habit
 </ol>
 </div>
 
