remove photo link for now

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
-          <li class="u-grey"><a href="photography">Photography</a></li>
+              <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
 
           </ul>
         </div>
