--- a/projtracker.html
+++ b/projtracker.html
@@ -43,7 +43,7 @@
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
-            <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
+                <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
 
         </div>
       </div>
@@ -78,7 +78,7 @@ Fall of 2018 I took INFO4340: User Experience and Software Development Studio. I
 What are the pain points people have with project tracking apps? To delve deeper, <b>we selected target audiences we had physical access to </b>- namely Cornell students, and brainstormed 3 different tasks people would want to track:
 
 
-
+<br />
 <div class="myDivElement">
 <ol>
 <li>
