--- a/cusd.html
+++ b/cusd.html
@@ -43,7 +43,7 @@
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
             <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
-            <li class="u-grey"><a target="_blank" href="photography">Photography</a></li>
+                <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
             <li class="u-grey"><a target="_blank" href="hhttps://www.linkedin.com/in/jintana-cunningham/">LinkedIn</a></li>
             <li class="u-grey"><a target="_blank" href="mailto:jc2747@cornell.edu">Email</a></li>
         </div>
