--- a/projtracker.html
+++ b/projtracker.html
@@ -311,6 +311,16 @@ Overall, we see the value of our app compared to alternatives to be the categori
 
 
 
+
+@media only screen and (max-width: 600px) {
+#myImg{
+  width: 290px;
+}
+}
+
+
+
+
 .myDivElement{
   display: flex;
    /* justify-content: center; */
