--- a/projtracker.html
+++ b/projtracker.html
@@ -328,6 +328,14 @@ Overall, we see the value of our app compared to alternatives to be the categori
 }
 
 
+@media only screen and (max-width: 800px){
+  .info {
+      margin-left:20px;
+      margin-right: 20px;
+  }
+}
+
+
 </style>
 
 <!--
