--- a/projtracker.html
+++ b/projtracker.html
@@ -232,7 +232,7 @@ Overall, we see the value of our app compared to alternatives to be the categori
 <p> We used the paper prototype to run through tasks with the potential users. This step of the design process allowed us to test ideas without much time expenditure. Our participants provided feedback on the flow, accessibility, and discoverability of the UI.</p>
 <br />
 <div>
-<img class = "screens" src ="images/paperprototype/Group.jpg" style = "width:400px">
+<img class = "screens" src ="images/paperprototype/Group.jpg">
 </div>
 <br />
 <p style = "font-weight: bold">Our Design Revisions:</p>
