--- a/projtracker.html
+++ b/projtracker.html
@@ -325,6 +325,8 @@ Overall, we see the value of our app compared to alternatives to be the categori
   display: flex;
    /* justify-content: center; */
    width: 100%;
+   position: relative;
+  left:20px;
 }
 
 
