--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                               </div>
                             </div> -->
 
-                              <div class="section-work" style="background-color:#FCFCFC">
+<a href = "projtracker.html">
+                              <div class="section-work grow" style="background-color:#FCFCFC">
                                     <div class="container">
                                       <div class="row">
                                         <div id="portfolio" class="twelve column">
@@ -222,7 +223,7 @@
                                               <!-- <a href="iqvia"> -->
 
                                               <img style="margin-bottom: 10px;" height="285" width="220" src="images/projtracker3.png">
-                                            </a>
+
                                             </div>
                                             <div class="six offset-by-two columns" >
                                                 <h5 class="u-dark" style="margin-bottom: 10px">Project Tracker</h5>
@@ -237,7 +238,7 @@
                                         </div>
                                         </div>
                                         </div>
-
+</a>
 
 
           <div class="section-work" style="background-color:#FCFCFC">
