--- a/via.html
+++ b/via.html
@@ -62,16 +62,16 @@ The theme was <span style = "font-weight:bold">improve the relationship between 
 <br />
 <iframe style = "text-align:center" src="https://onedrive.live.com/embed?cid=2564511D32F4B59A&resid=2564511D32F4B59A%21106&authkey=ADczl3xZF9ZARmY&em=2" width="502" height="427" frameborder="0" scrolling="no"></iframe>
 
-<!-- <br />
-<img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
-<p style="margin-bottom: 20px"> Squad
-</p>
+<style scoped>
 
 
-<img src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
-<p style="margin-bottom: 20px"> Part of a set of icons I created for my project
-</p> -->
+ @media only screen and (max-width: 800px){
+   iframe {
+width:auto;
+   }
+ }
 
+</style>
 
 
 
