--- a/iqvia.html
+++ b/iqvia.html
@@ -62,7 +62,7 @@
 
 
 <br />
-<img src="images/iqviainterns.jpg" style="margin-bottom: 10px;" height="300" width="410">
+<img class = "upload" src="images/iqviainterns.jpg" >
 <p style="margin-bottom: 20px; text-align: center"> Squad
 </p>
 
@@ -71,7 +71,16 @@
 <p style="margin-bottom: 20px; text-align: center"> Part of a set of icons I created for my project
 </p>
 
+<style scoped>
 
+
+.upload{
+  margin-bottom: 10px;
+  height:300;
+  width:410;
+}
+
+</style>
 
 
 
