--- a/iqvia.html
+++ b/iqvia.html
@@ -67,7 +67,7 @@
 </p>
 
 
-<img src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
+<img class = "center" src="images/iconset.png" style="margin-bottom: 10px;" height="150" width="390">
 <p style="margin-bottom: 20px; text-align: center"> Part of a set of icons I created for my project
 </p>
 
