--- a/other.html
+++ b/other.html
@@ -60,13 +60,13 @@
 
 
 
-<img src="images/poster.png" style="margin-bottom: 10px;" height="500" width="350">
+<img class = "mobile" src="images/poster.png" style="margin-bottom: 10px;" height="500" width="350">
 <p style="margin-bottom: 20px; text-align: center"> Poster for a design tour I helped host during my internship at IQVIA.
 <br />
 <br />
 
 
-  <img src="images/beetle.png" style="margin-bottom: 10px;" height="500" width="590">
+  <img class = "mobile" src="images/beetle.png" style="margin-bottom: 10px;" height="500" width="590">
   <p style="margin-bottom: 20px; text-align: center"> Beetle poster I made for fun
 </p>
 <br />
@@ -76,6 +76,22 @@
 <br /><br />
 <h6 style="text-align: center"><strong>More Coming Soon!</strong></h6>
 </div>
+
+
+<style scoped>
+
+
+@media only screen and (max-width: 800px){
+  .mobile{
+    width:100%;
+    height:100%;
+  }
+}
+
+
+
+</style>
+
 
 
 </body>
