slate responsive + button

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               <div class="four columns">
                 <!-- <a href="iqvia"> -->
 
-                <img style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
+                <img id = "imac" style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
 
               </div>
               <div class="six offset-by-two columns">
@@ -248,6 +248,9 @@
         </div>
       </div>
     </div>
+
+
+
 
 
   <a href="projtracker.html">
@@ -561,6 +564,16 @@
             border-color: orange
           }
         }
+
+
+        @media only screen and (max-width: 1090px){
+            #imac {
+                width: 300px;
+                height:200px;
+                margin: 6px 0;
+            }
+        }
+
       </style>
 
 
