--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <li class="u-grey"><a href="index">Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
         <li class="u-grey"><a target="_blank" href="Jintana Cunningham Resume.pdf">Resume</a></li>
-            <!--     <!-- <li class="u-grey"><a href="photography">Photography</a></li> --> 
+            <!--     <!-- <li class="u-grey"><a href="photography">Photography</a></li> -->
 
 
 
@@ -111,11 +111,11 @@
                   <h5 class="u-dark" style="margin-bottom: 20px">About</h5>
                 <!-- <h6 style="margin-bottom: 20px">Hello!
                 </h6> -->
-                <h6 style="margin-bottom: 20px">Hi there! I'm Jintana Cunningham, a junior at Cornell studying Information Science with an expected minor in business and Japanese.
+                <h6 style="margin-bottom: 20px">Hi there! I'm Jintana Cunningham, a junior at Cornell studying Information Science with a focus on User Experience and Interactive Technology, previous intern at <a href = "https://www.iqvia.com/">IQVIA.</a>
                 </h6>
                 <!-- <h6 style="margin-bottom: 20px"> I taught myself the know-how to make this website in the summer of 2017, and I have been tinkering with digital interfaces ever since.
                 </h6> -->
-                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a representative of <a href="http://www.youresearch.org/">YouResearch. </a>
+                <h6 style="margin-bottom: 20px">In school, I am a product designer at <a href="http://www.cusd.cornell.edu/">CUSD, a sustainable-design project team at Cornell University,</a> as well as a student researcher in the Communication and Technology Lab. </a>
                 </h6>
                 <h6 style="margin-bottom: 20px">In my free time, I like to read Nabokov, hike, and explore local art museums with my DSLR.
                 </h6>
