--- a/indexv2.html
+++ b/indexv2.html
@@ -57,16 +57,16 @@
 
 <body>
 
-<img src = "images/hero.jpg"  height="1000" width="1600"/>
+<img src = "images/hero.jpg"  height="1000" width="1500"/>
 
   <div class="section-title">
     <div class="container" style="margin-top: 120px; margin-bottom: 72px">
       <div class="row">
         <div class="twelve columns">
           <a href="index">
-            <h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2>
+            <h2 class="u-blue" style="margin-bottom:0">Jintana Cunningham</h2>
           </a>
-          <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell ✨</h4>
+          <h4 style="margin-bottom:0">Aspiring UX designer studying Information Science at Cornell ✨</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
@@ -561,6 +561,20 @@
             border-color: orange
           }
         }
+
+
+
+.section-title{
+  top:-1000px;
+  position:relative;
+
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
       </style>
 
 
