--- a/other.html
+++ b/other.html
@@ -52,7 +52,13 @@
 
 <div class="info">
 
-  <img class = "center" src="images/kyoto.png" style="margin-bottom: 10px">
+<p style = "text-align: center">
+Below are some of the visuals I have made over the years.
+</p>
+
+
+  <br />
+  <img class = "center" src="images/kyoto.png" style="margin-bottom: 10px" >
   <p style="margin-bottom: 20px; text-align: center">I wanted to recreate a memory from my childhood but render it in a geometric style. This was my first time experimenting with low-poly art, but be on the lookout for more in the future!
 </p>
 <br />
@@ -71,6 +77,39 @@
 </p>
 <br />
 <br />
+
+<img class = "mobile" src="images/bike.png" style="margin-bottom: 10px;" height="400" width="290">
+<p style="margin-bottom: 20px; text-align: center"> A logo I designed for a project team at Cornell
+</p>
+<br />
+<br />
+
+
+<img class = "mobile" src="images/promo.png" style="margin-bottom: 10px;" height="340" width="590">
+<p style="margin-bottom: 20px; text-align: center"> A cover photo that I created for my project team's final exposition
+</p>
+<br />
+<br />
+
+<img class = "mobile" src="images/banner.png" style="margin-bottom: 10px;" height="500" width="200">
+<p style="margin-bottom: 20px; text-align: center"> A banner design that I created for Cornell's collegetown
+</p>
+<br />
+<br />
+
+<img class = "mobile" src="images/psycho" style="margin-bottom: 10px;" height="500" width="200">
+<p style="margin-bottom: 20px; text-align: center"> A poster I created as a part of my film poster design series
+</p>
+<br />
+<br />
+
+
+<img class = "mobile" src="images/final2.gif" style="margin-bottom: 10px;" height="400" width="500">
+<p style="margin-bottom: 20px; text-align: center"> A character that I created for HCI research
+</p>
+<br />
+<br />
+
 
 
 <br /><br />
