--- a/other.html
+++ b/other.html
@@ -97,11 +97,11 @@ Below are some of the visuals I have made over the years.
 <br />
 <br />
 
-<img class = "mobile" src="images/psycho" style="margin-bottom: 10px;" height="500" width="200">
+<!-- <img class = "mobile" src="images/psycho" style="margin-bottom: 10px;" height="500" width="200">
 <p style="margin-bottom: 20px; text-align: center"> A poster I created as a part of my film poster design series
 </p>
 <br />
-<br />
+<br /> -->
 
 
 <img class = "mobile" src="images/final2.gif" style="margin-bottom: 10px;" height="400" width="500">
