edit img ratio on iqvia page

--- a/iqvia.html
+++ b/iqvia.html
@@ -62,7 +62,7 @@
 
 
 <br />
-<img class = "upload" src="images/iqviainterns.jpg" >
+<img class = "upload" src="images/iqviainterns.jpg" height = "300" width = "410">
 <p style="margin-bottom: 20px; text-align: center"> Squad
 </p>
 
@@ -76,10 +76,13 @@
 
 .upload{
   margin-bottom: 10px;
-  height:300;
-  width:410;
 }
 
+
+
+.center{
+  width:auto;
+}
 </style>
 
 
