--- a/index.html
+++ b/index.html
@@ -222,25 +222,29 @@
                               </div>
                             </div> -->
 
-                            <div class="section-work grow" style="background-color:#FCFCFC">
+
+
+
+
+                            <!-- <div class="section-work grow" style="background-color:#FCFCFC">
                               <div class="topBar" data-aos="fade-up" data-aos-duration="800">
                                 <div class="container">
                                   <div class="row">
                                     <div id="portfolio" class="twelve column">
                                       <div class="row card" style="margin-top:40px;">
-                                        <div class="four columns">
+                                        <div class="four columns"> -->
                                           <!-- <a href="iqvia"> -->
 
-                                          <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
+                                          <!-- <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/Imac.png">
 
                                         </div>
                                         <div class="six offset-by-two columns">
                                           <h5 class="u-dark" style="margin-bottom: 10px">Grubhub Food Preferences</h5>
                                           <h6 class="u-grey" style="margin-bottom: 20px">Spring 2019
                                           </h6>
-                                          <h6 style="margin-bottom: 20px"> Redesign Concept </h6>
+                                          <h6 style="margin-bottom: 20px"> Redesign Concept </h6> -->
                                           <!-- <a class="button" href="projtracker.html">View</a> -->
-                                          <h6 style="margin-bottom: 20px">Report coming soon.
+                                          <!-- <h6 style="margin-bottom: 20px">Report coming soon.
                                           </h6>
                                         </div>
                                       </div>
@@ -248,7 +252,7 @@
                                   </div>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
 
 
   <div class="section-work grow" style="background-color:#FCFCFC">
