--- a/index.html
+++ b/index.html
@@ -582,7 +582,8 @@ transition: 3s;
         left: 0;
         right: 100%;
         bottom: -5px;
-        background: #000;
+        background: yellow;
+        /* underline color */
         height: 4px;
         transition-property: left right;
         transition-duration: 0.3s;
