--- a/yr.html
+++ b/yr.html
@@ -52,7 +52,7 @@
 
 <div class="header"><h3>YouResearch Redesign</h3></div>
 <div class="info"
-<p><strong>YouResearch</strong> is a non-profit run by students for students. The non-profit leader board includes motivated students involved in research ranging from Stanford to Columbia. Recently selected as the Web Director of this organization, it was my role to give their website a modern rebranding.</p> </div>
+<p><strong>YouResearch</strong> is a non-profit run by students for students. The non-profit leader board includes motivated students involved in research ranging from Stanford to Columbia. I was selected as the Web Director of this organization to give their website a modern rebranding.</p> </div>
 <!-- <img class = "center" src="images/yr.jpg"> -->
 <div class="info">
 
