emoji and link hover

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a href="index">
             <h2 class="u-blue" style="margin-bottom:20px">Jintana Cunningham</h2>
           </a>
-          <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell ✨</h4>
+          <h4 style="margin-bottom:35px">Aspiring UX designer studying Information Science at Cornell 👩🏻‍💻</h4>
           <ul class="header-links--inline">
             <li class="u-grey"><a href=index>Portfolio</a></li>
             <li class="u-grey"><a href=about>About</a></li>
@@ -304,7 +304,7 @@
                   <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
                   </h6>
                   <h6 style="margin-bottom: 20px"> Personal project tracker. </h6>
-                  <a class="button" href="projtracker.html">View</a>
+                  <a class="button underline" href="projtracker.html">View</a>
 
                 </div>
               </div>
@@ -333,7 +333,7 @@
                 <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                 </h6>
                 <h6 style="margin-bottom: 20px"> VIA - A concept that bridges the patient and provider. </h6>
-                <a class="button" href="via.html">View</a>
+                <a class="button underline" href="via.html">View</a>
 
 
               </div>
@@ -362,7 +362,7 @@
                 <h6 class="u-grey" style="margin-bottom: 20px">Summer 2018
                 </h6>
                 <h6 style="margin-bottom: 20px"> UX Engineer Intern for healthcare consulting organization. </h6>
-                <a class="button" href="iqvia">View</a>
+                <a class="button underline" href="iqvia">View</a>
 
               </div>
             </div>
@@ -415,7 +415,7 @@
                 <h6 class="u-grey" style="margin-bottom: 20px">Fall 2017
                 </h6>
                 <h6 style="margin-bottom: 20px"> Redesigned website for a student-run non-profit. </h6>
-                <a class="button" href="yr.html">View</a>
+                <a class="button underline" href="yr.html">View</a>
               </div>
             </div>
           </div>
@@ -444,7 +444,7 @@
 
                 <h6 style="margin-bottom: 20px"> In Fall of 2017, I was accepted to the CUSD project team at Cornell University, joining their Technical Operations team.
                 </h6>
-                <a class="button" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a>
+                <a class="button underline" href="https://medium.com/@jc2747/designing-a-hub-for-cornell-sustainable-design-b961b7952008">View</a>
               </div>
             </div>
           </div>
@@ -468,7 +468,7 @@
                 </h6>
                 <h6 style="margin-bottom: 20px">I helped redesign the organization's website, increasing views by 3x. I also designed educational newsletters that reached 5000+ prisoners across the country.
                 </h6>
-                <a class="button" href="https://prisonerexpress.org">View</a>
+                <a class="button underline" href="https://prisonerexpress.org">View</a>
                 </h6>
               </div>
             </div>
@@ -495,7 +495,7 @@
                 <h6 style="margin-bottom: 20px">On campus I collaborate with a diverse group of students to create a fashion magazine.
 
                 </h6>
-                <a class="button" href="thread">View</a>
+                <a class="button underline" href="thread">View</a>
               </div>
             </div>
           </div>
@@ -582,7 +582,7 @@ transition: 3s;
         left: 0;
         right: 100%;
         bottom: -5px;
-        background: yellow;
+        background: #86BBD8;
         /* underline color */
         height: 4px;
         transition-property: left right;
