--- a/index.html
+++ b/index.html
@@ -145,87 +145,6 @@
 
 
 
-
-  <!-- <div class="section-work" style="background-color:#FCFCFC">
-                <div class="container">
-                  <div class="row">
-                    <div id="portfolio" class="twelve column">
-                      <div class="row card" style="margin-top:40px;">
-                        <div class= "four columns">
-                          <!-- <a href="iqvia"> -->
-
-  <!-- <img style="margin-bottom: 10px;" height="200" width="120" src="images/schoolwork.png"> -->
-  <!-- </a>
-                        </div>
-                        <div class="six offset-by-two columns" >
-                            <h5 class="u-dark" style="margin-bottom: 10px">CountOn</h5>
-                          <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
-                          </h6>
-                          <h6 style="margin-bottom: 20px"> Countdown app for a class  </h6>
-                          <h6 style="margin-bottom: 20px">Coming soon.
-                          </h6>
-
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                    </div>
-                    </div> -->
-
-  <!--  <div class="section-work" style="background-color:#FCFCFC">
-                          <div class="container">
-                            <div class="row">
-                              <div id="portfolio" class="twelve column">
-                                <div class="row card" style="margin-top:40px;">
-                                  <div class= "four columns">
-                                    <!-- <a href="iqvia">
-
-                                    <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
-                                  </a>
-                                  </div>
-                                  <div class="six offset-by-two columns" >
-                                      <h5 class="u-dark" style="margin-bottom: 10px">INFO 3450 - Giving Tree</h5>
-                                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
-                                    </h6>
-                                    <h6 style="margin-bottom: 20px"> Personal project tracker app.  </h6>
-                                      <a class="button" href="https://jc2747-homework-05.herokuapp.com/">View</a>
-
-                                  </div>
-                                </div>
-                              </div>
-                              </div>
-                              </div>
-                              </div>
-
-                    <div class="section-work" style="background-color:#FCFCFC">
-                          <div class="container">
-                            <div class="row">
-                              <div id="portfolio" class="twelve column">
-                                <div class="row card" style="margin-top:40px;">
-                                  <div class= "four columns">
-                                    <!-- <a href="iqvia">
-
-                                    <img style="margin-bottom: 10px;" height="290" width="220" src="images/bih.png">
-                                  </a>
-                                  </div>
-                                  <div class="six offset-by-two columns" >
-                                      <h5 class="u-dark" style="margin-bottom: 10px">INFO 4340 - Countdown</h5>
-                                    <h6 class="u-grey" style="margin-bottom: 20px">Fall 2018
-                                    </h6>
-                                    <h6 style="margin-bottom: 20px"> Personal project tracker.  </h6>
-                                      <a class="button" href="https://jc2747-homework-05.herokuapp.com/">View</a>
-
-                                  </div>
-                                </div>
-                              </div>
-                              </div>
-                              </div>
-                            </div> -->
-
-
-
-
-
                             <!-- <div class="section-work grow" style="background-color:#FCFCFC">
                               <div class="topBar" data-aos="fade-up" data-aos-duration="800">
                                 <div class="container">
@@ -253,6 +172,38 @@
                                 </div>
                               </div>
                             </div> -->
+
+
+
+                            <div class="section-work grow" style="background-color:#FCFCFC">
+                              <div class="topBar" data-aos="fade-up" data-aos-duration="800">
+                                <div class="container">
+                                  <div class="row">
+                                    <div id="portfolio" class="twelve column">
+                                      <div class="row card" style="margin-top:40px;">
+                                        <div class="four columns">
+                                          <!-- <a href="iqvia"> -->
+
+                                          <img id="imac" style="margin-bottom: 10px;" height="245" width="400" src="images/datavis.png">
+
+                                        </div>
+                                        <div class="six offset-by-two columns">
+                                          <h5 class="u-dark" style="margin-bottom: 10px">Mental Health Data Visualization</h5>
+                                          <h6 class="u-grey" style="margin-bottom: 20px">Spring 2019
+                                          </h6>
+                                          <h6 style="margin-bottom: 20px"> Data Visualization</h6>
+                                          <!-- <a class="button" href="projtracker.html">View</a> -->
+                                          <h6 style="margin-bottom: 20px">Report coming soon.
+                                          </h6>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+
+
 
 
   <div class="section-work grow" style="background-color:#FCFCFC">
