--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
                                           </h6>
                                           <h6 style="margin-bottom: 20px"> Data Visualization</h6>
                                           <!-- <a class="button" href="projtracker.html">View</a> -->
-                                          <h6 style="margin-bottom: 20px">Report coming soon.
-                                          </h6>
+                                          <a class="button underline" href="datavis.html">View</a>
                                         </div>
                                       </div>
                                     </div>
