--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
 
 
-
-  <a href="projtracker.html">
+<!--
+  <a href="projtracker.html"> -->
     <div class="section-work grow" style="background-color:#FCFCFC">
       <div class="topBar" data-aos="fade-up" data-aos-duration="800">
         <div class="container">
@@ -263,7 +263,7 @@
         </div>
       </div>
     </div>
-  </a>
+  <!-- </a> -->
 
 
   <div class="section-work" style="background-color:#FCFCFC">
