--- a/datavis.html
+++ b/datavis.html
@@ -68,9 +68,9 @@
 
 <br />
 <img class = "screens" src ="images/datavis.png">
-
+<!-- 
 <br />
-<h3> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h3>
+<h3> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h3> -->
 <br />
 <br />
 <p>
