resize image on datavis

--- a/datavis.html
+++ b/datavis.html
@@ -68,7 +68,7 @@
 
 <br />
 <img class = "screens" src ="images/datavis.png">
-<!-- 
+<!--
 <br />
 <h3> <a href = "https://tm-project-tracker.herokuapp.com/">View the app</a></h3> -->
 <br />
@@ -133,7 +133,7 @@ For the bubble chart, we were not able to complete all the correlations we had h
 <p>We extracted data from responses to the <a href = "http://www2.psy.unsw.edu.au/dass/" >DASS Survey</a> and D3.js to create the visualization.</p>
 <br />
 <br />
-<img src ="images/fulldatavis.png">
+<img class = "screens" src ="images/fulldatavis.png">
 <br />
 <br />
 
