--- a/index.html
+++ b/index.html
@@ -175,6 +175,37 @@
 
 
 
+                      <div class="section-work grow" style="background-color:#FCFCFC">
+                        <div class="topBar" data-aos="fade-up" data-aos-duration="800">
+                          <div class="container">
+                            <div class="row">
+                              <div id="portfolio" class="twelve column">
+                                <div class="row card" style="margin-top:40px;">
+                                  <div class="four columns">
+                                    <!-- <a href="iqvia"> -->
+
+                                    <img id="imac" style="margin-bottom: 10px;" height="245" width="350" src="images/bofa.png">
+
+                                  </div>
+                                  <div class="six offset-by-two columns">
+                                    <h5 class="u-dark" style="margin-bottom: 10px">Bank of America</h5>
+                                    <h6 class="u-grey" style="margin-bottom: 20px">Summer 2019
+                                    </h6>
+                                    <h6 style="margin-bottom: 20px"> UX Engineer Intern</h6>
+                                    <!-- <a class="button" href="projtracker.html">View</a> -->
+                                    <!-- <a class="button underline" href="datavis.html">View</a> -->
+                                    <h6 style="margin-bottom: 20px">Report coming soon.
+                                    </h6>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+
+
                             <div class="section-work grow" style="background-color:#FCFCFC">
                               <div class="topBar" data-aos="fade-up" data-aos-duration="800">
                                 <div class="container">
