--- a/index.html
+++ b/index.html
@@ -194,12 +194,12 @@
                                     <h6 style="margin-bottom: 20px"> UX Engineer Intern</h6>
                                     <!-- <a class="button" href="projtracker.html">View</a> -->
                                     <!-- <a class="button underline" href="datavis.html">View</a> -->
-                                    <h6 style="margin-bottom: 20px">Report coming soon.
+                                    <a class="button underline" href="bofa.html">View</a>
                                     </h6>
                                   </div>
                                 </div>
                               </div>
-                            </div> 
+                            </div>
                           </div>
                         </div>
                       </div>
