--- a/bofa.html
+++ b/bofa.html
@@ -61,7 +61,7 @@
 
 
 <br />
-<img class = "upload" src="images/bofainterns.jpg" height = "400" width = "425">
+<img class = "upload" src="images/bofainterns.JPG" height = "400" width = "425">
 <p style="margin-bottom: 20px; text-align: center"> Last day :(
 </p>
 
